@@ -1181,9 +1181,19 @@ NEARDATA struct permonst mons[] = {
 	M3_INFRAVISIBLE|M3_INFRAVISION, HI_LORD),
 /* Weeping Angels */
     MON("weeping angel", S_ANGEL,
-	LVL(12, 12, -5, 70, -7), (G_NOCORPSE|G_SGROUP|G_GENO|G_SHEOL|2),
-	A(ATTK(AT_GAZE, AD_BLNK, 0, 0), ATTK(AT_CLAW, AD_DRLI, 1, 8),
-	  ATTK(AT_CLAW, AD_DREN, 1, 8), ATTK(AT_TUCH, AD_LVLT, 1, 6),
+	LVL(12, 16, -5, 70, -7), (G_NOCORPSE|G_SGROUP|G_GENO|2),
+	A(ATTK(AT_GAZE, AD_BLNK, 0, 0), ATTK(AT_CLAW, AD_DRLI, 2, 4),
+	  ATTK(AT_CLAW, AD_DREN, 2, 4), ATTK(AT_TUCH, AD_LVLT, 2, 3),
+	  NO_ATTK, NO_ATTK),
+	SIZ(WT_HUMAN, 0, 0, MS_SILENT, MZ_HUMAN),
+	MR_FIRE|MR_COLD|MR_SLEEP|MR_DISINT|MR_POISON|MR_ACID|MR_STONE, 0,
+	M1_BREATHLESS|M1_HUMANOID|M1_REGEN,
+	M2_NOPOLY|M2_NEUTER|M2_HOSTILE|M2_MAGIC,
+	M3_INFRAVISION, CLR_GRAY),
+    MON("weeping archangel", S_ANGEL,
+	LVL(15, 18, -5, 80, -10), (G_NOCORPSE|G_GENO|G_SHEOLONLY|2),
+	A(ATTK(AT_GAZE, AD_BLNK, 0, 0), ATTK(AT_CLAW, AD_DRLI, 2, 8),
+	  ATTK(AT_CLAW, AD_DREN, 2, 8), ATTK(AT_TUCH, AD_LVLT, 2, 6),
 	  NO_ATTK, NO_ATTK),
 	SIZ(WT_HUMAN, 0, 0, MS_SILENT, MZ_HUMAN),
 	MR_FIRE|MR_COLD|MR_SLEEP|MR_DISINT|MR_POISON|MR_ACID|MR_STONE, 0,
