@@ -44,6 +44,7 @@
 	* new monsters:
 	  - locusts (from SporkHack)
 	  - weeping angels
+	  - weeping archangels
 	  - deep orcs
 
 	* dungeon layout:
